fix: Fix menu alignment

--- a/src/sections/Header/components/Menu/Menu.module.css
+++ b/src/sections/Header/components/Menu/Menu.module.css
@@ -42,6 +42,7 @@
 /* Main menu container */
 .container {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   padding: 15px 45px;
 }
